# iap-alpha

./: .antigravityconfig.md  .editorconfig  .env.example  .gitignore  5_Check formatting.txt  7_Run tests.txt  8_Run clippy.txt  LICENSE  README.md  STEP-8.10-COMPLETION-SUMMARY.md  STEP-8.10-QUICK-REFERENCE.md  STEP-8.5-VERIFICATION-SUMMARY.md  STEP-8.9-COMPLETION-SUMMARY.md  STEP-8.9-QUICK-CHECKLIST.md  STEP-8.9-VISUAL-VERIFICATION-GUIDE.md  checks.json  docker-compose.yml  finish-setup.sh  package-lock.json  package.json  playwright.config.ts  setup-e2e-tests.sh  test_login.sh  test_logout.sh  verify-step-8.10.sh  verify-step-8.9.sh
.gemini/artifacts/: quick_reference.md  task_list.md
.gemini/artifacts/archive/phase_4_database/: database_foundation_walkthrough.md  migration_execution_summary.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.test  Cargo.toml  Dockerfile.dev  api_log.txt
backend/api/: Cargo.toml
backend/api/examples/: generate_test_password.rs
backend/api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/api/src/auth/: jwt.rs  mod.rs  password.rs  tests.rs
backend/api/src/middleware/: auth.rs
backend/api/src/routes/: auth.rs  companies.rs  health.rs  mod.rs  screeners.rs  tracker.rs  users.rs
backend/api/tests/: analyzer_test.rs  auth_integration.rs  common.rs  screener_test.rs  test_login.rs
backend/core/: Cargo.toml
backend/core/src/ports/: document_provider.rs  storage.rs
backend/db/: Cargo.toml  README.md
backend/db/examples/: migrate.rs  nuke_db.rs  run_migrations.rs
backend/db/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_update_test_user_password.sql  004_update_documents_table.sql  005_support_jobs_and_shares.sql
backend/db/src/: error.rs  lib.rs
backend/db/src/models/: company.rs  daily_price.rs  derived_metric.rs  document.rs  financial.rs  financials.rs  mod.rs  screener.rs  user.rs  verdict.rs
backend/db/src/repositories/: company.rs  document.rs  mod.rs  screener_repository.rs  tracker_repository.rs  user.rs  verdict.rs
backend/domain/: Cargo.toml
backend/domain/src/: error.rs  lib.rs
backend/domain/src/domain/: mod.rs
backend/domain/src/metrics/: calculator.rs  mod.rs
backend/domain/src/periods/: mod.rs
backend/domain/src/ports/: market_data.rs  mod.rs
backend/domain/src/services/: mod.rs  screener_service.rs
backend/providers/: Cargo.toml
backend/providers/src/: lib.rs
backend/providers/src/alpha_vantage/: mod.rs
backend/providers/src/mock/: mod.rs
backend/providers/src/s3/: mod.rs
backend/target.old/: .rustc_info.json
backend/tests/common/: mod.rs
backend/worker/: Cargo.toml
backend/worker/src/: lib.rs  main.rs  scheduler.rs
backend/worker/src/jobs/: earnings_poll.rs  metrics_recalc.rs  mod.rs  price_refresh.rs
backend/worker/tests/: jobs_test.rs
docs/: 04-database-foundation.md  05-backend-core.md  09-screener-module.md  14-antigravity-best-practices.md  GIT-SETUP-AND-AUTOMATED-PR-WORKFLOW.md  analyzer-url-guide.md  architecture-design-v3.md  browser-debug-script.md  database-design-v1.md  phase-10-delivery-report.md  phase-10-improvement-plan.md  prd-v1-4.md
docs/build-plan-v3/: 00-table-of-contents.md  01-prerequisites-setup.md  02-repository-initialization.md  03-docker-development-environment.md  06-authentication-system.md  07-analyzer-module-backend.md  08-analyzer-module-frontend.md  09-screener-module.md  10-background-jobs.md  11-results-tracker.md  12-testing-cicd.md  13-cloud-deployment.md
docs/verification/: step-8.4-FINAL-STATUS.md  step-8.4-VISUAL-GUIDE.md  step-8.4-verification-report.md  step-8.5-COMPLETION.md  step-8.5-VISUAL-GUIDE.md  step-8.5-verification-report.md
frontend/: Dockerfile.dev  components.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/analyzer/: ConfirmCloseDialog.tsx  ConflictDialog.tsx  ControlsBar.tsx  DocumentCell.tsx  DocumentGrid.tsx  MetricRow.tsx  MetricsDashboard.tsx  VerdictForm.tsx
frontend/src/components/screener/: ResultRow.tsx  ResultsTable.tsx  ScreenerCard.tsx  ScreenerEditor.tsx  ScreenerList.tsx
frontend/src/components/tracker/: SummaryCards.tsx  TrackerFilters.tsx  TrackerTable.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: heatmap.ts
frontend/src/pages/: AnalyzerPage.tsx  ScreenerPage.tsx  TrackerPage.tsx
frontend/src/test/: setup.ts
golden-copy/: balance-sheet-input.txt  balance-sheet-output.json  cash-flow-input.txt  cash-flow-output.json  dividends-input.txt  dividends-output.json  earnings-calendar-input.txt  earnings-calendar-output.csv  earnings-call-transcript-input.txt  earnings-estimates-input.txt  earnings-estimates-output.json  earnings-input.txt  earnings-output.json  fx-daily-input.txt  fx-daily-output.json  income-statement-input.txt  inome-statement-output.json  insider-transactions-input.txt  insider-transactions-output.json  overview-input.txt  overview-output.json  shares-outstanding-input.txt  shares-outstanding-output.json  splits-input.txt  time-series-daily-adjusted-input.txt  time-series-daily-adjusted-output.json
playwright-report/: index.html
scripts/: auto-pr.sh  generate-dev-keys.sh  setup-test-db.sh  simulate_ci.sh  test-analyzer-api.sh  test-browser-flow.sh  test-screeners.sh  verify-controls-bar.sh  verify-metrics-dashboard.sh  verify_step_7_1.sh  verify_step_7_2_2.sh  verify_step_7_3_2.sh  verify_step_7_3_3.sh  verify_step_7_4_2.sh  verify_step_7_4_3.sh
tests/e2e/: README.md  analyzer.spec.ts  config.ts
tests/e2e/helpers/: auth.ts
tests/e2e/pages/: AnalyzerPage.ts
