[workspace]
members = ["api", "domain", "db", "worker", "providers"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"

# Internal crates
domain = { path = "domain", version = "0.1.0" }
db = { path = "db", version = "0.1.0" }
providers = { path = "providers", version = "0.1.0" }
worker = { path = "worker", version = "0.1.0" }
api = { path = "api", version = "0.1.0" }
