[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "9"
base64ct = "=1.6.0"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
matchit = "0.7"
rsa = "0.9"
# Internal
domain = { workspace = true }
db = { workspace = true }
providers = { workspace = true }
rand = "0.8"
uuid.workspace = true
dotenvy = { workspace = true }
multer = "3.0"
bytes = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
