[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "bigdecimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUIDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal numbers for financial data
bigdecimal = { version = "0.3", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
