[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUIDs
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Decimal numbers for financial data
bigdecimal = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
