[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
app_core = { package = "core", path = "../core" }
bytes = "1.5"
