[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
domain = { workspace = true }
bytes = "1.5"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
