[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
domain = { workspace = true }
db = { workspace = true }
providers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
async-trait = { workspace = true }
dotenvy = { workspace = true }
